[package]
name = "lru"
version = "0.18.0"
authors = ["Jerome Froelich <jeromefroelic@hotmail.com>"]
rust-version = "1.85.0"
categories = ["caching", "no-std"]
description = "A LRU cache implementation"
homepage = "https://github.com/jeromefroe/lru-rs"
repository = "https://github.com/jeromefroe/lru-rs.git"
documentation = "https://docs.rs/lru/"
readme = "README.md"
license = "MIT"
keywords = ["LRU", "cache"]
edition = "2021"

[features]
default = ["std", "hashbrown"]
std = []
nightly = ["hashbrown", "hashbrown/nightly"]

[dependencies]
hashbrown = { version = "0.17.0", optional = true }

# ETNA benchmark runner framework dependencies (used by src/bin/etna.rs
# and the etna module). Placed in main [dependencies] so the bin target
# links against them; they are only referenced from the workload harness.
proptest = "1.0"
quickcheck = { path = "/Users/akeles/Programming/projects/PbtBenchmark/quickcheck-rs", features = ["etna"] }
quickcheck_macros = { path = "/Users/akeles/Programming/projects/PbtBenchmark/quickcheck-rs/quickcheck_macros" }
crabcheck = { path = "/Users/akeles/Programming/projects/PbtBenchmark/crabcheck", features = ["profiling"] }
rand = { version = "0.9", default-features = false, features = ["os_rng", "small_rng", "thread_rng"] }
hegeltest = "0.3.7"

[dev-dependencies]
scoped_threadpool = "0.1.*"
stats_alloc = "0.1.*"
